--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<footer class="footer">
 		<small>
-			copyright &copy; <a href="https:Www.google.com">NerdHerd</a>
+			copyright &copy; <a href="#">NerdHerd</a>
 			by<a href="#"> Md Sikandar</a>
 		</small>
 		<nav>
